# preframr-playroutine

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: sidtrace.cpp
docs/: GENERIC_RECOVERY.md  INSTRUMENTATION.md  IR_FOUNDATION_PR.md  ROADMAP.md  SIDTRACE_PR.md
patches/: instrument.patch
preframr_playroutine/: __init__.py  ir.py  lift.py  recover.py  render.py  trace.py
tests/: _hvsc.py  _ir_fixture.py  _minisid.py  _render.py  make_ir_golden.py  straggler_report.py  test_analysis.py  test_hvsc.py  test_ir.py  test_lift.py  test_oracle.py  test_recover.py  test_render.py  test_retrackers.py  update_snapshot.py
tests/fixtures/: fidelity_snapshot.json  ir_golden.npz  tunes.json
